ActionFieldLayout: Fix `z-index` hack for invalid input element
Follow-up to 742bf48f84e5efd518b59999d7482b6094a69ebe.

--- a/src/themes/wikimediaui/layouts.less
+++ b/src/themes/wikimediaui/layouts.less
@@ -194,13 +194,15 @@
 
 	// Give hovered/focussed widgets higher `z-index`, so that borders display correctly.
 	.oo-ui-actionFieldLayout-input > .oo-ui-textInputWidget {
-		// Apply these styles to the element itself and all following siblings (e.g. .oo-ui-iconElement-icon)
 		> .oo-ui-inputWidget-input:hover,
-		> .oo-ui-inputWidget-input:hover ~ *,
 		> .oo-ui-inputWidget-input:focus,
-		> .oo-ui-inputWidget-input:focus ~ *,
 		&.oo-ui-flaggedElement-invalid > .oo-ui-inputWidget-input {
-			z-index: 1;
+			// Apply these styles to the element itself and all following siblings (e.g. .oo-ui-iconElement-icon),
+			// otherwise the icons etc. will disappear behind the input
+			&,
+			& ~ * {
+				z-index: 1;
+			}
 		}
 	}
 
